syntax = "proto3";

package ntypes;

option go_package = "github.com/piotrkowalczuk/ntypes";
option java_multiple_files = true;
option java_package = "com.github.piotrkowalczuk";

import "google/protobuf/wrappers.proto";

// Bytes represents a byte slice that may be nil, set or not set at all.
message Bytes {
    google.protobuf.BytesValue optional = 1;
	bool valid = 2;
}

// BytesArray represents an array of byte slices that may be nil, set or not set at all.
message BytesArray {
	repeated bytes array = 1;
	bool valid = 2;
}

// String represents a string that may be nil, set or not set at all.
message String {
    google.protobuf.StringValue optional = 1;
	bool valid = 2;
}

// StringArray represents an array of strings that may be nil, set or not set at all.
message StringArray {
	repeated string array = 1;
	bool valid = 2;
}

// Int32 represents a int32 that may be nil, set or not set at all.
message Int32 {
    google.protobuf.Int32Value optional = 1;
	bool valid = 2;
}

// Int32Array represents an array of int32s that may be nil, set or not set at all.
message Int32Array {
	repeated int32 array = 1;
	bool valid = 2;
}

// Int64 represents a int64 that may be nil, set or not set at all.
message Int64 {
    google.protobuf.Int64Value optional = 1;
	bool valid = 2;
}

// Int64Array represents an array of int64s that may be nil, set or not set at all.
message Int64Array {
	repeated int64 array = 1;
	bool valid = 2;
}

// UInt32 represents a UInt32 that may be nil, set or not set at all.
message UInt32 {
    google.protobuf.UInt32Value optional = 1;
	bool valid = 2;
}

// UInt32Array represents an array of uint32s that may be nil, set or not set at all.
message UInt32Array {
	repeated uint32 array = 1;
	bool valid = 2;
}

// UInt64 represents a UInt64 that may be nil, set or not set at all.
message UInt64 {
    google.protobuf.UInt64Value optional = 1;
	bool valid = 2;
}

// UInt64Array represents an array of uint64s that may be nil, set or not set at all.
message UInt64Array {
	repeated uint64 array = 1;
	bool valid = 2;
}

// Float represents a float that may be nil, set or not set at all.
message Float {
    google.protobuf.FloatValue optional = 1;
	bool valid = 2;
}

// FloatArray represents an array of floats that may be nil, set or not set at all.
message FloatArray {
	repeated float array = 1;
	bool valid = 2;
}

// Double represents a double that that may be nil, set or not set at all.
message Double {
    google.protobuf.DoubleValue optional = 1;
	bool valid = 2;
}

// DoubleArray represents an array of doubles that may be nil, set or not set at all.
message DoubleArray {
	repeated double array = 1;
	bool valid = 2;
}

// Bool represents a bool that may be nil, set or not set at all.
message Bool {
    google.protobuf.BoolValue optional = 1;
	bool valid = 2;
}

// BoolArray represents an array of booleans that may be nil, set or not set at all.
message BoolArray {
	repeated bool array = 1;
	bool valid = 2;
}
